--- a/243_Hw4.Rmd
+++ b/243_Hw4.Rmd
@@ -11,7 +11,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Problem 1
 
+Method 1: 
+
+In these three problems there are actually two methods that we compared. We know the true value values are .33333 for a, 3.48318 for b, and 2.27477 for c. A very simple preliminary method we can use is the "dart board method". The goal is to create a rectangle or box that encloses the entire function. The plots are displayed so that the axises represent the lines of the rectangle/box. This method works very well for a and c. They both converge well within 999 iterations to the true value. The 2 dimensional process is randomly generate (x,y) coordinates in the rectangle. Then the proportion that fall under the curve is multiplied by the area of the rectangle and this gives us our estimate. This mehtod does not preform as well for part b. Now we generate (x,y,z) coordinates and find the proportion that fall below the function plane. I have previously used this method and had decent results. I believe this particular function illustrates how this method can quickly run into issues. It takes about 100,000 iterations for the estimation to get close to 3.4 and even at that it is underestimating the volume under the plane to be about 3.2 as opposed to 3.4. My guess is a few things are at play that are causing issues in this rough method. One is the function is not by any means a simple shape. Just figuring out the dimensions of the enclosing box were difficult. We have to be careful to remain within the bounds of x and y. There could be some rounding error on where the box needs to end. Then we also have a cross over the z-axis which complicates the problem further. The conclusion is that while this works well for a ncie clean function the second method we looked at is more dependable and therefore better for use in real life applications since we wouldn't know the true error. 
+
+Method 2: 
+
 ##Problem 2
+
+The clear selection of v is .1 Both .1 and 1 do decent jobs of calculating the true integral value which is approximately .1359. .1 has a much smaller standard error though. v = 10 is consistantly doing a very poor job. It has a small error but a small error for a consistantly bad estimation. 
 
 ##Problem 3
 
@@ -23,3 +31,5 @@ knitr::opts_chunk$set(echo = TRUE)
 ##Problem 5
 
 ##Problem 6
+
+This is a pretty straight forward method. We tried some different shapes and rates but ultimately decided to stick with shape = 2 and rate = 1. It tends to estimate the E[1/x] almost exactly right and underestimates a little but not muc for the E[x]. 
